<resources>
    <string name="app_name">Meraki Book</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sach_moi_nhat">Sách mới nhất</string>
    <string name="xem_tat_ca">XEM TẤT CẢ</string>
    <string name="sach_moi">Sach mới</string>
    <string name="sach_hot_nhat">Sách hot nhất</string>
    <string name="bia_cung">Bìa cứng</string>
    <string name="bia_mem">Bìa mềm</string>
    <string name="size">14.5 x 20.5 cm</string>
    <string name="chao_mung">Chào mừng đến Meraki Book!</string>
    <string name="the_gioi">Thế giới riêng của bạn</string>
    <string name="khep_minh">Khép mình và chìm đắm</string>
    <string name="trong_kho">trong kho sách được cập nhật liên tục \n và đa dạng các thể loại.</string>
    <string name="ket_noi">Kết nối và chia sẻ</string>
    <string name="cong_dong">các trải nghiệm thú vị của bạn với \n cộng đồng những người yêu sách khác.</string>
    <string name="hint_email_sdt">Email hoặc SĐT</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_password_again">Nhập lại mật khẩu</string>
    <string name="edt_forgot_password">Quên mật khẩu?</string>
    <string name="btn_dang_nhap">Đăng nhập</string>
    <string name="btn_dang_ki">Đăng kí</string>
    <string name="nha_van_nam_cao">Nhà văn Nam Cao</string>
    <string name="ten_that">Tên thật: </string>
    <string name="tran_huu_tri">Trần Hữu Trí</string>
    <string name="nam_sinh">Năm sinh: </string>
    <string name="_29_10_1915">29/10/1915</string>
    <string name="nam_mat">Năm mất: </string>
    <string name="_28_11_1951">28/11/1951</string>
    <string name="que_quan">Quê quán: </string>
    <string name="ha_nam">Hà Nam</string>
    <string name="so_luong_tp">Số lượng tác phẩm: </string>
    <string name="tren_50">trên 50</string>
    <string name="thong_tin">Thông tin, tiểu sử</string>
    <string name="thong_tin_nam_cao">Nam Cao là một trong những nhà văn tiêu biểu nhất của trào lưu hiện thực phê phán thời kỳ 1940-1945, là một trong những cây bút tiêu biểu của văn xuôi Việt Nam thời kỳ kháng chiến chống Pháp 1945-1954.</string>
    <string name="cac_tac_pham">Các tác phẩm</string>
    <string name="xem_tat_ca_tac_pham">XEM TẤT CẢ</string>
    <string name="tac_gia">Tác giả</string>
    <string name="nam_cao">Nam Cao</string>
    <string name="vu_trong_phung"> Vũ Trọng Phụng</string>
    <string name="van_tinh"> Vãn Tình</string>
    <string name="dale_carnegie">Dale Carnegie</string>
    <string name="richard_unger">RICHARD UNGER</string>
    <string name="yuval_noah_harari">Yuval Noah Harari</string>
    <string name="cac_tac_pham_cua_nam_cao">Các tác phẩm của Nam Cao</string>
    <string name="txt_lao_hac">Lão Hạc</string>
    <string name="txt_nam_cao">Nam Cao</string>
    <string name="so_trang_150">150 trang</string>
    <string name="trang">150 trang</string>
    <string name="title_activity_detail_book">DetailBookActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chi_tiet_sach">Chi tiết sách</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="txt_payment_option">Phương thức thanh toán</string>
    <string name="txt_payment_option_tittle">Lựa chọn phương thức thanh toán</string>
    <string name="rdo_cod">Thanh toán tiền mặt khi nhận hàng</string>
    <string name="rdo_atm">Thẻ ATM nội địa</string>
    <string name="rdo_visa">Thẻ quốc tế (Visa, Master,...)</string>
    <string name="txt_qrcode_tittle">Thanh toán qua mã QR</string>
    <string name="txt_atm">Sử dụng ứng dụng trên di động của ngân hàng (mobile banking) quét mã QR bên dưới để thanh toán.</string>
    <string name="txt_visa">Sử dụng ứng dụng thẻ ghi nợ trên thiết bị di động quét mã QR bên dưới để thanh toán.</string>
    <string name="txt_qrpay">QR PAY</string>
    <string name="txt_time">Thời gian mã QR còn hiệu lực</string>
    <string name="txt_countdown">00:00</string>
    <string name="btn_check">Kiểm tra trạng thái giao dịch</string>
    <string name="btn_backHome">Trở về trang chủ</string>
    <string name="txt_order_successful_tittle">ĐẶT HÀNG THÀNH CÔNG</string>
    <string name="txt_thankyou">Cảm ơn bạn đã mua sách tại Meraki Book. </string>
    <string name="txt_thankyou2">Chúng tôi sẽ chuyển đơn hàng đến bạn sớm nhất có thể. </string>
    <string name="txt_thankyou3">Xin chân thành cảm ơn. </string>
    <string name="txt_detail">Mọi thông tin thắc mắc về đơn hàng, bạn vui lòng liên hệ đến Hotline 0166 45 45 450 vào giờ hành chính.</string>
    <string name="btn_order_detail">XEM CHI TIẾT ĐƠN HÀNG</string>
    <string name="txt_my_book">Sách của tôi</string>
    <string name="txt_recently_book">Xem gần đây</string>
    <string name="txt_tittle_horror">Trinh thám</string>
    <string name="txt_sort">Sắp xếp</string>
    <string-array name="sp_sort">
        <item>Tất cả</item>
        <item>Mới nhất</item>
        <item>Cũ nhất</item>
        <item>Bán chạy</item>
        <item>Miễn phí</item>
    </string-array>
    <string name="txt_tittle_my_rating">Đánh giá của tôi</string>
    <string name="btn_all_star">Tất cả (n)</string>
    <string name="btn_5_star">5 sao (1)</string>
    <string name="btn_4_star">4 sao (1)</string>
    <string name="btn_3_star">3 sao (1)</string>
    <string name="btn_2_star">2 sao (1)</string>
    <string name="btn_1_star">1 sao (1)</string>
    <string name="txt_setting">Cài đặt</string>
    <string name="txt_notify_user">Thông tin cá nhân</string>
    <string name="txt_setting_app">Cài đặt ứng dụng</string>
    <string name="txt_setting_read">Thiết lập đọc</string>
    <string name="txt_dark_screen">Chế độ ban đêm</string>
    <string name="txt_language">Ngôn ngữ</string>
    <string name="txt_prioritize">Truyện được ưu tiên</string>
    <string name="txt_private_security">Riêng tư và bảo mật</string>
    <string name="txt_setting_password">Cài đặt mật khẩu</string>
    <string name="txt_help">Trợ giúp và hỗ trợ</string>
    <string name="btn_sign_out">Đăng xuất</string>
    <string name="tai_khoan_khach_hang">Khi sử dụng dịch vụ Meraki Book, quý khách sẽ cung cấp cho chúng tôi thông tin về địa chỉ email, mật khẩu và họ tên để có được 1 tài khoản tại đây. Việc sử dụng và bảo mật thông tin tài khoản là trách nhiệm và quyền lợi của quý khách khi sử dụng Meraki Book. Ngoài ra, những thông tin khác trong tài khoản như tên tuổi, địa chỉ.... là những thông tin sẽ giúp Meraki Book phục vụ quý khách tốt nhất.\nTrong trường hợp thông tin do quý khách cung cấp không đầy đủ hoặc sai dẫn đến việc không thể giao hàng cho quý khách, chúng tôi có quyền đình chỉ hoặc từ chối phục vụ, giao hàng mà không phải chịu bất cứ trách nhiệm nào đối với quý khách. Khi có những thay đổi thông tin của quý khách, vui lòng cập nhật lại thông tin trong tài khoản tại Meraki Book.\nQuý khách phải giữ kín mật khẩu và tài khoản, hoàn toàn chịu trách nhiệm đối với tất cả các hoạt động diễn ra thông qua việc sử dụng mật khẩu hoặc tài khoản của mình. Quý khách nên đảm bảo thoát khỏi tài khoản tại Meraki Book sau mỗi lần sử dụng để bảo mật thông tin của mình.</string>
    <string name="dieu_khoan_su_dung">Điều khoản sử dụng</string>
    <string name="chinh_sach_bao_mat">Chính sách bảo mật</string>
    <string name="chinh_sach_giao_hang">Chính sách giao hàng</string>
    <string name="chinh_sach_doi_tra_hoan_tien">Chính sách đổi trả, hoàn tiền</string>
    <string name="chinh_sach_cua_Meraki">Chính sách của Meraki</string>
    <string name="tieu_de_tai_khoan_khach_hang">Tài khoản khách hàng</string>
    <string name="tieu_de_quyen_loi">Quyền lợi bảo mật thông tin</string>
    <string name="quyen_loi_bao_mat">Khi sử dụng dịch vụ tại Meraki Book, quý khách được đảm bảo rằng những thông tin cung cấp cho chúng tôi sẽ chỉ được dùng để nâng cao chất lượng dịch vụ dành cho khách hàng và sẽ không được chuyển giao cho một bên thứ ba nào khác vì mục đích thương mại. Thông tin của quý khách tại Meraki Book sẽ được chúng tôi bảo mật và chỉ trong trường hợp pháp luật yêu cầu, chúng tôi sẽ buộc phải cung cấp những thông tin này cho các cơ quan pháp luật.</string>
    <string name="tieu_de_quyen_va_nghia_vu">Quyền và nghĩa vụ của Meraki Book</string>
    <string name="quyen_va_nghia_vu">&#8226; Đảm bảo hệ thống kỹ thuật hoạt động ổn định, liên tục để cung cấp dịch vụ tới khách hàng theo đúng Thỏa thuận này, quy định của pháp luật liên quan.
        &#8226; Thông báo kịp thời cho khách hàng về thời điểm tạm ngừng hoạt động của hệ thống. Meraki Book được miễn trừ trách nhiệm trong trường hợp hệ thống tạm ngừng hoạt động để bảo dưỡng, nâng cấp định kỳ, sửa chữa đột xuất hoặc các trường hợp bất khả kháng.\n
        &#8226; Toàn quyền chủ động thay đổi giá cước, giá bán lẻ nội dung và danh mục nội dung trong mỗi gói cước tương ứng tùy vào khả năng và nhu cầu thực tế của Meraki Book tại từng thời điểm.\n
        &#8226; Cung cấp, lưu trữ đầy đủ thông tin liên quan tới giao dịch của khách hàng.\n
        &#8226; Hướng dẫn khách hàng sử dụng dịch vụ, giải đáp thắc mắc, xử lý khiếu nại của khách hàng trong quá trình đăng ký và sử dụng dịch vụ với điều kiện khách hàng cung cấp đầy đủ các thông tin liên quan đến giao dịch.\n
        &#8226; Được miễn trừ toàn bộ trách nhiệm trong trường hợp khách hàng gây ra bất cứ thiệt hại nào cho một bên thứ ba và yêu cầu khách hàng bồi thường toàn bộ thiệt hại thực tế mà Khách hàng gây ra cho Meraki Book.\n
        &#8226; Tuân thủ Thỏa thuận này và các quy định của pháp luật liên quan.\n
        &#8226; Meraki Book có quyền xóa - ẩn - block các bình luận và tài khoản của khách hàng trên các nền tảng của Meraki Book khi có hành vi ảnh hưởng đến Meraki Book như giới thiệu, spam, gây kích động, cung cấp thông tin sai lệch, không chính xác, v.v…</string>
    <string name="tieu_de_quyen_va_nghia_vu_khach_hang">Quyền và nghĩa vụ của khách hàng</string>
    <string name="tong_cong">Tổng cộng</string>
    <string name="ngay_giao_hang">Ngày giao hàng</string>
    <string name="_10_11_2021">10/11/2021</string>
    <string name="ma_don_hang">Mã đơn hàng</string>
    <string name="_1569a">1569A</string>
    <string name="giao_hang_thanh_cong">Giao hàng thành công</string>
    <string name="mua_lai">Mua lại</string>
    <string name="thong_bao">Thông báo</string>
    <string name="header_tai_khoan">Tài khoản</string>
    <string name="header_van_chuyen">Đơn vị vận chuyển</string>
    <string name="DC_van_chuyen">Lựa chọn đơn vị vận chuyển</string>
    <string name="giao_hang_nhanh">Giao hàng nhanh</string>
    <string name="gia_giao_hang_nhanh">20.000đ</string>
    <string name="ngay_nhan_nhanh">Ngày nhận 30/11 - 1/12</string>
    <string name="giao_hang_tietkiem">Giao hàng tiết kiệm</string>
    <string name="gia_giao_hang_tietkiem">18.000đ</string>
    <string name="ngay_nhan_tietkiem">Ngày nhận 30/11 - 4/12</string>
    <string name="giao_hang_Viettel">Viettel Post</string>
    <string name="gia_giao_hang_Viettel">19.000đ</string>
    <string name="ngay_nhan_Viettel">Ngày nhận 30/11 - 3/12</string>
    <string name="dong_y">Đồng ý</string>
</resources>