<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_popup"
        android:padding="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/iconcheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/txt_order_successful_tittle"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_thankyou"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_thankyou2"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txt_detail"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_thankyou3"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnMuaSach"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/btn_order_detail"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>