<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/navBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/imbBackSetting"
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:layout_weight="0.5"
                android:background="@drawable/icon_back" />

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9.5"
                android:gravity="center"
                android:text="@string/txt_setting"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="24dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_skin"
            android:text="@string/header_tai_khoan"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:gravity="center_vertical"
            android:paddingStart="24dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_notify_user"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingStart="35dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_skin"
            android:text="@string/txt_setting_app"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:gravity="center_vertical"
            android:paddingStart="24dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/thong_bao"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingStart="35dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_setting_read"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingStart="35dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_dark_screen"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingStart="35dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_language"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingStart="35dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_skin"
            android:text="@string/txt_private_security"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:gravity="center_vertical"
            android:paddingStart="24dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_setting_password"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingStart="35dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_skin"
            android:text="@string/txt_help"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:gravity="center_vertical"
            android:paddingStart="24dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/yellow" />
        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:background="@drawable/background_btn"
            android:text="@string/btn_sign_out"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
</ScrollView>