<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvItemList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_coin"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tong_cong"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtTotalPice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="135.000đ"
            android:layout_marginStart="20dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_skin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngay_giao_hang"
            android:gravity="center"/>
            <TextView
                android:id="@+id/txtNgayGiaoHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_11_2021"
                android:layout_marginStart="5dp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ma_don_hang"
                android:gravity="center"/>
            <TextView
                android:id="@+id/txtMaDonHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1569a"
                android:layout_marginStart="5dp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_weight="1"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_done" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/giao_hang_thanh_cong" />
            </LinearLayout>
            <Button
                android:layout_width="76dp"
                android:layout_height="20dp"
                android:layout_weight="0"
                android:layout_marginStart="20dp"
                android:text="@string/mua_lai"
                android:background="@drawable/custom_button"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>